--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://Tofan-afk.github.io/The-Architects-Website",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -12,10 +15,10 @@
   "dependencies": {
     "@formkit/auto-animate": "^0.8.1",
     "animejs": "^3.2.2",
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-responsive-masonry": "^2.1.7",
-    "vite-plugin-multi-pages": "^0.0.14",
     "yet-another-react-lightbox": "^3.15.6"
   },
   "devDependencies": {
@@ -27,6 +30,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "sass": "^1.69.6",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "vite-plugin-multi-pages": "^0.0.14"
   }
 }
